// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render simple mdx 1`] = `
"<div>
  <h1>Lore ipsum</h1>
  <ul>
    <li>Apples</li>
    <li>Pears</li>
  </ul>
</div>
"
`;

exports[`should render simple mdx with layout 1`] = `
"<div id=\\"layout\\">
  <div><h1>Hi</h1></div>
</div>
"
`;

exports[`should render the example 1`] = `
"<div id=\\"layout\\">
  <div>
    <h1>Hello, world!</h1>
    <code>dem0</code>
  </div>
</div>
"
`;
